infra/k8s/auth-mongodb-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-mongodb-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-mongodb
  template:
    metadata:
      labels:
        app: auth-mongodb
    spec:
      containers:
        - name: auth-mongodb
          image: mongo

---
apiVersion: v1
kind: Service
metadata:
  name: auth-mongodb-service
spec:
  selector:
    app: auth-mongodb
  ports:
    - port: 27017
      name: auth-mongodb
      protocol: TCP
      targetPort: 27017
